# fluent-bit-manager

./: Makefile  README.md  pyproject.toml
.woodpecker/: release.yml  test-linux.yml
_scripts/: push_release.sh
manager/: controller.py
